[workspace]
resolver = "2"

# ============================================================
# Cuadrantes — agregar a medida que se migran
# ============================================================
members = [
    # 00_unanchay/ — PERCIBIR
    # 01_yachay/   — CONOCER
    # 02_ruway/    — HACER
    # 03_ukupacha/ — RAÍZ (wawa excluido)
    # shared/, web/
    "00_unanchay/chaka/chaka-app",
    "00_unanchay/chaka/chaka-app-llimphi",
    "00_unanchay/chaka/chaka-bcd",
    "00_unanchay/chaka/chaka-codegen",
    "00_unanchay/chaka/chaka-ir",
    "00_unanchay/chaka/chaka-lexer",
    "00_unanchay/chaka/chaka-parser",
    "00_unanchay/chaka/chaka-runtime",
    "00_unanchay/chaka/chaka-shadow",
    "00_unanchay/khipu/khipu-app",
    "00_unanchay/khipu/khipu-brahman",
    "00_unanchay/khipu/khipu-core",
    "00_unanchay/khipu/khipu-gravity",
    "00_unanchay/khipu/khipu-share",
    "00_unanchay/pineal/demos/pineal-bars-demo",
    "00_unanchay/pineal/demos/pineal-contour-demo",
    "00_unanchay/pineal/demos/pineal-demo",
    "00_unanchay/pineal/demos/pineal-financial-demo",
    "00_unanchay/pineal/demos/pineal-flow-demo",
    "00_unanchay/pineal/demos/pineal-galeria-demo",
    "00_unanchay/pineal/demos/pineal-gpu-demo",
    "00_unanchay/pineal/demos/pineal-heatmap-demo",
    "00_unanchay/pineal/demos/pineal-hexbin-demo",
    "00_unanchay/pineal/demos/pineal-mesh-demo",
    "00_unanchay/pineal/demos/pineal-phosphor-demo",
    "00_unanchay/pineal/demos/pineal-polar-demo",
    "00_unanchay/pineal/demos/pineal-stream-demo",
    "00_unanchay/pineal/demos/pineal-treemap-demo",
    "00_unanchay/pineal/pineal-bars",
    "00_unanchay/pineal/pineal-cartesian",
    "00_unanchay/pineal/pineal-contour",
    "00_unanchay/pineal/pineal-core",
    "00_unanchay/pineal/pineal-export",
    "00_unanchay/pineal/pineal-financial",
    "00_unanchay/pineal/pineal-flow",
    "00_unanchay/pineal/pineal-heatmap",
    "00_unanchay/pineal/pineal-hexbin",
    "00_unanchay/pineal/pineal-mesh",
    "00_unanchay/pineal/pineal-phosphor",
    "00_unanchay/pineal/pineal-polar",
    "00_unanchay/pineal/pineal-render",
    "00_unanchay/pineal/pineal-stream",
    "00_unanchay/pineal/pineal-treemap",
    "00_unanchay/pineal/pineal-umbrella",
    "00_unanchay/pluma/foreign-docx",
    "00_unanchay/pluma/pluma-app",
    "00_unanchay/pluma/pluma-align",
    "00_unanchay/pluma/pluma-align-embeddings",
    "00_unanchay/pluma/pluma-core",
    "00_unanchay/pluma/pluma-cuerpo",
    "00_unanchay/pluma/pluma-deck-app",
    "00_unanchay/pluma/pluma-deck-core",
    "00_unanchay/pluma/pluma-deck-recorrido-llimphi",
    "00_unanchay/pluma/pluma-deck-web",
    "00_unanchay/pluma/pluma-editor-cuerpo",
    "00_unanchay/pluma/pluma-editor-llimphi",
    "00_unanchay/pluma/pluma-graph",
    "00_unanchay/pluma/pluma-graph-transform",
    "00_unanchay/pluma/pluma-llm",
    "00_unanchay/pluma/pluma-llm-anthropic",
    "00_unanchay/pluma/pluma-llm-cohere",
    "00_unanchay/pluma/pluma-llm-gemini",
    "00_unanchay/pluma/pluma-llm-core",
    "00_unanchay/pluma/pluma-llm-mock",
    "00_unanchay/pluma/pluma-llm-openai-compatible",
    "00_unanchay/pluma/pluma-md",
    "00_unanchay/pluma/pluma-md-reader-web",
    "00_unanchay/pluma/pluma-notebook-app",
    "00_unanchay/pluma/pluma-notebook-core",
    "00_unanchay/pluma/pluma-notebook-exec",
    "00_unanchay/pluma/pluma-notebook-graph-llimphi",
    "00_unanchay/pluma/pluma-notebook-kernel-llm",
    "00_unanchay/pluma/pluma-notebook-kernel-media",
    "00_unanchay/pluma/pluma-notebook-kernel-multi",
    "00_unanchay/pluma/pluma-notebook-kernel-python",
    "00_unanchay/pluma/pluma-notebook-kernel-tinkuy",
    "00_unanchay/pluma/pluma-notebook-kernel-wasm",
    "00_unanchay/pluma/pluma-notebook-llimphi",
    "00_unanchay/pluma/pluma-notebook-store",
    "00_unanchay/pluma/pluma-render-plan",
    "00_unanchay/pluma/pluma-semantic",
    "00_unanchay/pluma/pluma-store",
    "00_unanchay/pluma/pluma-transform",
    "00_unanchay/pluma/pluma-transform-llm",
    "00_unanchay/pluma/pluma-transform-tabla",
    "00_unanchay/rimay/rimay-verbo",
    "00_unanchay/rimay/rimay-verbo-core",
    "00_unanchay/rimay/rimay-verbo-daemon",
    "00_unanchay/rimay/rimay-verbo-daemon-bin",
    "00_unanchay/rimay/rimay-verbo-fastembed",
    "00_unanchay/rimay/rimay-verbo-mock",
    "00_unanchay/puriy/puriy-app",
    "00_unanchay/puriy/puriy-core",
    "00_unanchay/puriy/puriy-engine",
    "00_unanchay/puriy/puriy-js",
    "00_unanchay/puriy/puriy-llimphi",
    "01_yachay/cosmos/cosmos-app-llimphi",
    "01_yachay/cosmos/cosmos-astrology",
    "01_yachay/cosmos/cosmos-canvas-llimphi",
    "01_yachay/cosmos/cosmos-card",
    "01_yachay/cosmos/cosmos-catalog",
    "01_yachay/cosmos/cosmos-cli",
    "01_yachay/cosmos/cosmos-coords",
    "01_yachay/cosmos/cosmos-core",
    "01_yachay/cosmos/cosmos-corpus",
    "01_yachay/cosmos/cosmos-eclipses",
    "01_yachay/cosmos/cosmos-leo",
    "01_yachay/cosmos/cosmos-engine",
    "01_yachay/cosmos/cosmos-ephemeris",
    "01_yachay/cosmos/cosmos-images",
    "01_yachay/cosmos/cosmos-model",
    "01_yachay/cosmos/cosmos-modules",
    "01_yachay/cosmos/cosmos-notebook-kernel",
    "01_yachay/cosmos/cosmos-pointing",
    "01_yachay/cosmos/cosmos-render",
    "01_yachay/cosmos/cosmos-rise-set",
    "01_yachay/cosmos/cosmos-server",
    "01_yachay/cosmos/cosmos-skywatch",
    "01_yachay/cosmos/cosmos-sundial",
    "01_yachay/cosmos/cosmos-tides",
    "01_yachay/cosmos/cosmos-transits",
    "01_yachay/cosmos/cosmos-sky",
    "01_yachay/cosmos/cosmos-store",
    "01_yachay/cosmos/cosmos-time",
    "01_yachay/cosmos/cosmos-validation",
    "01_yachay/cosmos/cosmos-wcs",
    "01_yachay/cosmos/cosmos-web",
    "01_yachay/dominium/dominium-app-llimphi",
    "01_yachay/dominium/dominium-canvas-llimphi",
    "01_yachay/dominium/dominium-cli",
    "01_yachay/dominium/dominium-core",
    "01_yachay/dominium/dominium-sim",
    "01_yachay/dominium/dominium-iso",
    "01_yachay/dominium/dominium-notebook-kernel",
    "01_yachay/dominium/dominium-physics",
    "01_yachay/dominium/dominium-render-plan",
    "01_yachay/iniy/iniy-cli",
    "01_yachay/iniy/iniy-core",
    "01_yachay/iniy/iniy-explorer-llimphi",
    "01_yachay/iniy/iniy-extract",
    "01_yachay/iniy/iniy-graph",
    "01_yachay/iniy/iniy-ingest",
    "01_yachay/iniy/iniy-nli",
    "01_yachay/iniy/iniy-nli-llm",
    "01_yachay/iniy/iniy-server",
    "01_yachay/iniy/iniy-store",
    "01_yachay/iniy/iniy-wiki",
    "01_yachay/nakui/nakui-core",
    "01_yachay/nakui/nakui-backend",
    "01_yachay/nakui/nakui-explorer-llimphi",
    "01_yachay/nakui/nakui-sheet",
    "01_yachay/nakui/nakui-sheet-llimphi",
    "01_yachay/nakui/nakui-sheet-nakuicore",
    "01_yachay/nakui/nakui-ui-llimphi",
    "01_yachay/tinkuy/tinkuy-abi",
    "01_yachay/tinkuy/tinkuy-core",
    "01_yachay/tinkuy/tinkuy-dsl",
    "01_yachay/tinkuy/tinkuy-forces",
    "01_yachay/tinkuy/tinkuy-llimphi",
    "01_yachay/tinkuy/tinkuy-sim",
    "02_ruway/nada",
    "02_ruway/cards",
    "02_ruway/tullpu/tullpu-core",
    "02_ruway/tullpu/tullpu-render",
    "02_ruway/tullpu/tullpu-ops",
    "02_ruway/tullpu/tullpu-paint",
    "02_ruway/tullpu/tullpu-app-llimphi",
    "02_ruway/tullpu/pixel-verbo-core",
    "02_ruway/tullpu/pixel-verbo-mock",
    "02_ruway/tullpu/pixel-verbo-daemon",
    "02_ruway/tullpu/pixel-verbo-daemon-bin",
    "02_ruway/ayni/ayni-core",
    "02_ruway/ayni/ayni-crypto",
    "02_ruway/ayni/ayni-sync",
    "02_ruway/ayni/ayni-cli",
    "02_ruway/ayni/ayni-llimphi",
    "02_ruway/ayni/ayni-store",
    "02_ruway/ayni/ayni-index",
    "02_ruway/ayni/ayni-ai",
    "02_ruway/ayni/ayni-minga",
    "02_ruway/ayni/ayni-app",
    "02_ruway/uya/uya-core",
    "02_ruway/uya/uya-app",
    "02_ruway/uya/uya-cli",
    "02_ruway/uya/uya-llimphi",
    "02_ruway/chasqui/card-admin",
    "02_ruway/chasqui/card-handshake",
    "02_ruway/chasqui/card-sidecar",
    "02_ruway/chasqui/chasqui-broker",
    "02_ruway/chasqui/chasqui-broker-explorer-llimphi",
    "02_ruway/chasqui/chasqui-card",
    "02_ruway/chasqui/chasqui-core",
    "02_ruway/chasqui/chasqui-explorer-llimphi",
    "02_ruway/chasqui/chasqui-nous",
    "02_ruway/chasqui/chasqui-nous-mock",
    "02_ruway/chasqui/chasqui-nous-real",
    "02_ruway/llimphi/llimphi-hal",
    "02_ruway/llimphi/llimphi-raster",
    "02_ruway/llimphi/llimphi-layout",
    "02_ruway/llimphi/llimphi-text",
    "02_ruway/llimphi/llimphi-compositor",
    "02_ruway/llimphi/llimphi-theme",
    "02_ruway/llimphi/llimphi-surface",
    "02_ruway/llimphi/llimphi-ui",
    "02_ruway/llimphi/llimphi-motion",
    "02_ruway/llimphi/llimphi-icons",
    "02_ruway/llimphi/llimphi-svg",
    "02_ruway/llimphi/llimphi-gallery",
    "02_ruway/llimphi/llimphi-gpu-bench",
    "02_ruway/llimphi/android/clear-screen-android",
    "02_ruway/llimphi/android/vello-hello-android",
    "02_ruway/llimphi/android/vello-text-android",
    "02_ruway/llimphi/widgets/app-header",
    "02_ruway/llimphi/widgets/banner",
    "02_ruway/llimphi/widgets/button",
    "02_ruway/llimphi/widgets/card",
    "02_ruway/llimphi/widgets/clipboard",
    "02_ruway/llimphi/widgets/context-menu",
    "02_ruway/llimphi/widgets/edit-menu",
    "02_ruway/llimphi/widgets/menubar",
    "02_ruway/llimphi/widgets/gallery",
    "02_ruway/llimphi/widgets/wawa-mark",
    "02_ruway/llimphi/widgets/tooltip",
    "02_ruway/llimphi/widgets/spinner",
    "02_ruway/llimphi/widgets/progress",
    "02_ruway/llimphi/widgets/toast",
    "02_ruway/llimphi/widgets/modal",
    "02_ruway/llimphi/widgets/empty",
    "02_ruway/llimphi/widgets/status-bar",
    "02_ruway/llimphi/widgets/shortcuts-help",
    "02_ruway/llimphi/widgets/splash",
    "02_ruway/llimphi/widgets/switch",
    "02_ruway/llimphi/widgets/segmented",
    "02_ruway/llimphi/widgets/dock-rail",
    "02_ruway/llimphi/widgets/breadcrumb",
    "02_ruway/llimphi/widgets/badge",
    "02_ruway/llimphi/widgets/avatar",
    "02_ruway/llimphi/widgets/skeleton",
    "02_ruway/llimphi/widgets/field",
    "02_ruway/llimphi/widgets/panel",
    "02_ruway/llimphi/widgets/panes",
    "02_ruway/llimphi/llimphi-workspace",
    "02_ruway/llimphi/widgets/list",
    "02_ruway/llimphi/widgets/grid",
    "02_ruway/llimphi/widgets/table",
    "02_ruway/llimphi/widgets/color-picker",
    "02_ruway/llimphi/widgets/slider",
    "02_ruway/llimphi/widgets/scroll",
    "02_ruway/llimphi/widgets/splitter",
    "02_ruway/llimphi/widgets/stat-card",
    "02_ruway/llimphi/widgets/tabs",
    "02_ruway/llimphi/widgets/theme-switcher",
    "02_ruway/llimphi/widgets/timeline",
    "02_ruway/llimphi/widgets/text-area",
    "02_ruway/llimphi/widgets/text-editor-core",
    "02_ruway/llimphi/widgets/text-editor",
    "02_ruway/llimphi/widgets/text-editor-lsp",
    "02_ruway/llimphi/widgets/text-input",
    "02_ruway/llimphi/widgets/tiled",
    "02_ruway/llimphi/widgets/nodegraph",
    "02_ruway/llimphi/widgets/tree",
    "02_ruway/llimphi/widgets/navigator",
    "02_ruway/llimphi/widgets/select",
    "02_ruway/llimphi/widgets/terminal",
    "02_ruway/llimphi/widgets/transport",
    "02_ruway/llimphi/widgets/waveform",
    "02_ruway/llimphi/widgets/chip",
    "02_ruway/llimphi/widgets/fab",
    "02_ruway/llimphi/widgets/wrap",
    "02_ruway/llimphi/widgets/range-slider",
    "02_ruway/llimphi/widgets/calendar",
    "02_ruway/llimphi/widgets/fitted-box",
    "02_ruway/llimphi/widgets/carousel",
    "02_ruway/llimphi/llimphi-image",
    "02_ruway/llimphi/widgets/rating",
    "02_ruway/llimphi/widgets/gauge",
    "02_ruway/llimphi/widgets/scaffold",
    "02_ruway/llimphi/widgets/hero",
    "02_ruway/llimphi/modules/allichay",
    "02_ruway/llimphi/modules/command-palette",
    "02_ruway/llimphi/modules/diff-viewer",
    "02_ruway/llimphi/modules/fif",
    "02_ruway/llimphi/modules/file-picker",
    "02_ruway/llimphi/modules/mini-map",
    "02_ruway/llimphi/modules/bookmarks",
    "02_ruway/llimphi/modules/plugin-host",
    "02_ruway/llimphi/modules/shuma-term",
    "02_ruway/llimphi/modules/symbol-outline",
    "02_ruway/llimphi/modules/selector",
    "02_ruway/nahual/nahual-shell-llimphi",
    "02_ruway/nahual/nahual-source-core",
    "02_ruway/nahual/nahual-file-explorer-llimphi",
    "02_ruway/nahual/nahual-image-viewer-llimphi",
    "02_ruway/nahual/nahual-thumb-core",
    "02_ruway/nahual/nahual-gallery-llimphi",
    "02_ruway/nahual/nahual-text-viewer-llimphi",
    "02_ruway/nahual/nahual-video-viewer-llimphi",
    "02_ruway/nahual/nahual-card-viewer-llimphi",
    "02_ruway/nahual/nahual-audio-viewer-llimphi",
    "02_ruway/nahual/nahual-tree-viewer-llimphi",
    "02_ruway/nahual/nahual-hex-viewer-llimphi",
    "02_ruway/nahual/nahual-table-viewer-llimphi",
    "02_ruway/nahual/nahual-markdown-viewer-llimphi",
    "02_ruway/nahual/nahual-archive-viewer-llimphi",
    "02_ruway/nahual/nahual-font-viewer-llimphi",
    "02_ruway/nahual/nahual-map-viewer-llimphi",
    "02_ruway/nahual/nahual-geo-core",
    "02_ruway/nahual/nahual-viewer-core",
    "02_ruway/paloma/paloma-core",
    "02_ruway/paloma/paloma-net",
    "02_ruway/paloma/paloma-store",
    "02_ruway/paloma/paloma-llimphi",
    "02_ruway/paloma/paloma-app",
    "02_ruway/raymi/raymi-core",
    "02_ruway/raymi/raymi-net",
    "02_ruway/raymi/raymi-store",
    "02_ruway/raymi/raymi-llimphi",
    "02_ruway/raymi/raymi-app",
    "02_ruway/mirada/asistente-puente",
    "02_ruway/mirada/mirada-app-llimphi",
    "02_ruway/mirada/mirada-asistente-llimphi",
    "02_ruway/mirada/mirada-bar-core",
    "02_ruway/mirada/mirada-bar-web",
    "02_ruway/mirada/mirada-body",
    "02_ruway/mirada/mirada-brain",
    "02_ruway/mirada/mirada-compositor",
    "02_ruway/mirada/mirada-ctl",
    "02_ruway/mirada/mirada-greeter",
    "02_ruway/mirada/mirada-launcher",
    "02_ruway/mirada/mirada-layout",
    "02_ruway/mirada/mirada-link",
    "02_ruway/mirada/mirada-portal",
    "02_ruway/mirada/mirada-protocol",
    "02_ruway/mirada/mirada-wallpaper",
    "02_ruway/pata/pata-core",
    "02_ruway/pata/pata-config",
    "02_ruway/pata/pata-host",
    "02_ruway/pata/pata-llimphi",
    "02_ruway/media/media-app",
    "02_ruway/media/media-recorder-app",
    "02_ruway/media/media-audio-cpal",
    "02_ruway/media/media-core",
    "02_ruway/media/media-encode-av1",
    "02_ruway/media/media-encode-opus",
    "02_ruway/media/media-mux-webm",
    "02_ruway/media/media-recorder-av1",
    "02_ruway/media/media-recorder-webm",
    "02_ruway/media/media-recorder-wav",
    "02_ruway/media/media-source-av1",
    "02_ruway/media/media-source-capture",
    "02_ruway/media/media-source-flac",
    "02_ruway/media/media-source-gif",
    "02_ruway/media/media-source-opus",
    "02_ruway/media/media-source-vorbis",
    "02_ruway/media/media-source-webm",
    "02_ruway/media/media-source-image",
    "02_ruway/media/media-source-mp3",
    "02_ruway/media/media-source-wav",
    "02_ruway/nahual/libs/meta-runtime",
    "02_ruway/nahual/libs/meta-schema",
    "02_ruway/wawa/wawa-panel-llimphi",
    "02_ruway/wawa/wawactl",
    "02_ruway/shuma/baremetal/matilda-app",
    "02_ruway/shuma/baremetal/matilda-apply",
    "02_ruway/shuma/baremetal/matilda-config",
    "02_ruway/shuma/baremetal/matilda-core",
    "02_ruway/shuma/baremetal/matilda-discover",
    "02_ruway/shuma/baremetal/matilda-ghost",
    "02_ruway/shuma/baremetal/matilda-linker",
    "02_ruway/shuma/baremetal/matilda-plan",
    "02_ruway/shuma/sandbox/shuma-card",
    "02_ruway/shuma/sandbox/shuma-config",
    "02_ruway/shuma/sandbox/shuma-core",
    "02_ruway/shuma/sandbox/shuma-discern",
    "02_ruway/shuma/sandbox/shuma-exec",
    "02_ruway/shuma/sandbox/shuma-history",
    "02_ruway/shuma/sandbox/shuma-infer",
    "02_ruway/shuma/sandbox/shuma-link",
    "02_ruway/shuma/sandbox/shuma-intent",
    "02_ruway/shuma/sandbox/shuma-line",
    "02_ruway/shuma/sandbox/shuma-module",
    "02_ruway/shuma/sandbox/shuma-module-canvas",
    "02_ruway/shuma/sandbox/shuma-module-commandbar",
    "02_ruway/shuma/sandbox/shuma-module-launcher",
    "02_ruway/shuma/sandbox/shuma-module-matilda",
    "02_ruway/shuma/sandbox/shuma-module-minga",
    "02_ruway/shuma/sandbox/shuma-module-shell",
    "02_ruway/shuma/sandbox/shuma-protocol",
    "02_ruway/shuma/sandbox/shuma-remote-exec",
    "02_ruway/shuma/sandbox/shuma-session",
    "02_ruway/shuma/sandbox/shuma-shell-render",
    "02_ruway/shuma/sandbox/shuma-sysmon",
    "02_ruway/shuma/shuma-cli",
    "02_ruway/shuma/shuma-shell-llimphi",
    "02_ruway/supay/supay-app-llimphi",
    "02_ruway/supay/supay-audio",
    "02_ruway/supay/supay-core",
    "02_ruway/supay/supay-mini-core",
    "02_ruway/supay/supay-doom-llimphi",
    "02_ruway/supay/supay-render-llimphi",
    "02_ruway/supay/supay-scene",
    "02_ruway/supay/supay-wad",
    "02_ruway/shuma/shuma-daemon",
    "02_ruway/shuma/shuma-gateway",
    "02_ruway/takiy/takiy-core",
    "02_ruway/takiy/takiy-synth",
    "02_ruway/takiy/takiy-midi",
    "02_ruway/takiy/takiy-playback",
    "02_ruway/takiy/takiy-app-llimphi",
    "03_ukupacha/agora/agora-app",
    "03_ukupacha/agora/agora-channel",
    "03_ukupacha/agora/agora-cli",
    "03_ukupacha/agora/agora-core",
    "03_ukupacha/agora/agora-gossip",
    "03_ukupacha/agora/agora-graph",
    "03_ukupacha/agora/agora-keystore",
    "03_ukupacha/agora/agora-net-brahman",
    "03_ukupacha/agora/agora-store",
    "03_ukupacha/arje/arje-card",
    "03_ukupacha/arje/arje-card-llimphi",
    "03_ukupacha/arje/arje-compat",
    "03_ukupacha/arje/init/arje-absorb",
    "03_ukupacha/arje/init/arje-getty-stub",
    "03_ukupacha/arje/init/arje-incarnate",
    "03_ukupacha/arje/init/arje-installer",
    "03_ukupacha/arje/init/arje-kernel",
    "03_ukupacha/arje/init/arje-net-bring-up",
    "03_ukupacha/arje/init/arje-packager",
    "03_ukupacha/arje/init/arje-snapshot",
    "03_ukupacha/arje/init/arje-soma",
    "03_ukupacha/arje/init/arje-zero",
    "03_ukupacha/arje/runtime/arje-brain",
    "03_ukupacha/arje/runtime/arje-brain-audit",
    "03_ukupacha/arje/runtime/arje-brain-cognitive",
    "03_ukupacha/arje/runtime/arje-brain-rules",
    "03_ukupacha/arje/runtime/arje-bus",
    "03_ukupacha/arje/runtime/arje-cas",
    "03_ukupacha/arje/runtime/arje-echo",
    "03_ukupacha/arje/runtime/arje-wasm",
    "03_ukupacha/minga/card-discovery",
    "03_ukupacha/minga/minga-cli",
    "03_ukupacha/minga/minga-core",
    "03_ukupacha/minga/minga-dht",
    "03_ukupacha/minga/minga-explorer-llimphi",
    "03_ukupacha/minga/minga-p2p",
    "03_ukupacha/minga/minga-store",
    "03_ukupacha/minga/minga-vfs",
    "03_ukupacha/sandokan/sandokan",
    "03_ukupacha/sandokan/sandokan-app",
    "03_ukupacha/sandokan/sandokan-daemon",
    "03_ukupacha/sandokan/sandokan-arje-engine",
    "03_ukupacha/sandokan/sandokan-local",
    "03_ukupacha/sandokan/sandokan-remote",
    "03_ukupacha/sandokan/sandokan-monitor-llimphi",
    "03_ukupacha/wawa-explorer/wawa-explorer-aoe",
    "03_ukupacha/wawa-explorer/wawa-explorer-core",
    "03_ukupacha/wawa-explorer/wawa-explorer-llimphi",
    "shared/allichay",
    "shared/app-bus",
    "shared/auth/auth-core",
    "shared/card/card-core",
    "shared/card/card-net",
    "shared/card/card-wit",
    "shared/foreign-av",
    "shared/foreign-fs",
    "shared/foreign-psd",
    "shared/foreign-ytdlp",
    "shared/format",
    "shared/forth-emisor",
    "shared/launcher-core",
    "shared/launcher-llimphi",
    "shared/rimay-localize",
    "shared/sandokan/sandokan-core",
    "shared/sandokan/sandokan-lifecycle",
    "shared/sandokan/sandokan-monitor-core",
    "shared/ssh",
    "shared/wawa-config",
    "shared/wawa-config-llimphi",
    "web/gioser-canvas-web",
    "web/gioser-geom",
    "web/gioser-graph-web",
    "web/gioser-palette",
    "web/gioser-physics",
    "web/gioser-shaders",
    "web/gioser-web",
]

# `wawa/` se excluye del workspace global porque corre en target
# `x86_64-unknown-none` y `panic = "abort"`, incompatibles con los
# perfiles globales. Los crates compartidos se referencian por `path`
# cruzando la frontera.
exclude = ["03_ukupacha/wawa"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Sergio <gerencia@jlsoltech.com>"]
publish = false
repository = "https://gitea.gioser.net/sergio/gioser"

[workspace.dependencies]
# === Configuración declarativa (vocabulario de esquemas) ===
allichay = { path = "shared/allichay" }
# === Registro de apps / menú global ===
app-bus = { path = "shared/app-bus" }
# === Serialización ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Diálogos nativos de archivo (Abrir/Guardar) — import/export de grupos.
rfd = "0.15"
lsp-types = "0.97"
serde-big-array = "0.5"
postcard = { version = "1", features = ["use-std"] }
toml = "0.8"
ron = "0.8"
bincode = "1"
base64 = "0.22"

# === Errores ===
thiserror = "2"           # bump uniforme; arje (era 1) puede requerir ajustes menores
anyhow = "1"

# === Async ===
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# === Observabilidad ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# === Linux primitives (arje) ===
nix = { version = "0.29", features = ["signal", "process", "sched", "mount", "fs", "socket", "net", "user"] }
libc = "0.2"

# === IDs / Hash / Crypto ===
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "rng-getrandom"] }
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# === WASM (arje) ===
# wasmi 1.0: unifica la versión con renaser (su kernel ya corre 1.0), para
# que el ABI WASM del host sea idéntico en Linux y en bare-metal.
wasmi = "1.0"
wat = "1"

# === Storage / DB ===
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# === Ingesta de documentos (iniy-ingest: PDF / EPUB) ===
pdf-extract = "0.7"
epub = "2.1"

# === Bulk import Wikipedia (iniy-wiki dump) ===
bzip2 = "0.4"

# === Compresión (minga multi-bundle) ===
zstd = "0.13"

# === HTTP server (iniy-server) ===
axum = "0.7"
tower = "0.5"

# === ANN sobre embeddings (iniy nli --ann) ===
instant-distance = "0.6"

# === P2P (minga) ===
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "macros", "kad", "identify", "relay", "dcutr", "autonat", "mdns"] }
libp2p-stream = "=0.4.0-alpha"
libp2p-allow-block-list = "0.6"

# === SSH (ssh, sandokan RemoteEngine, matilda) ===
russh = "0.54"

# === Math determinista cross-platform (dominium) ===
libm = "0.2"

# === SMF (takiy-midi) ===
# midly: parser/emitter SMF tipo 0/1, no_std-friendly, sin allocs en hot path.
midly = "0.5"

# === Code parsing (minga) ===
arboard = "3"
ropey = "1.6"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"

# === FS notify ===
notify = "6.1"

# === Grafos (iniy, nakui-core ya lo usa directo en 0.6) ===
petgraph = "0.6"

# === Image decoding (nahual-image-viewer-llimphi) ===
# default-features = false: nos quedamos con PNG + JPEG + WebP (lossless).
# tullpu-render exporta a las tres; AVIF/TIFF/… los habilitamos si una app
# los pide específicamente.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# === FUSE (minga-vfs) ===
# default-features = false: prescinde de pkg-config/libfuse-dev en build.
# El montaje pasa a ser Rust puro (vía el helper `fusermount3` en runtime).
fuser = { version = "0.15", default-features = false }

# === CLI / auth (minga) ===
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# === PAM (auth-core) ===
pam = "0.8"

# === D-Bus (arje compat) ===
zbus = { version = "4", default-features = false, features = ["tokio"] }

# === Tests ===
tempfile = "3"

# === Llimphi (motor gráfico soberano) ===
# wgpu sobre Vulkan/Metal/DX12, winit para ventana en dev Linux.
# raw-window-handle 0.6 alinea winit 0.30 con wgpu 24.
# vello 0.5 = rasterizador vectorial sobre wgpu 24.
# taffy 0.9 = motor Flexbox/Grid puro Rust (ya pulled por transitivos, lo alineamos).
# parley 0.2 = shaping/layout de texto compatible con peniko 0.4 (que vello 0.5 expone).
wgpu = "24"
winit = "0.30"
raw-window-handle = "0.6"
pollster = "0.4"
vello = "0.5"
# Árbol de accesibilidad para lectores de pantalla (NVDA/VoiceOver/Orca/TalkBack).
# Lo consume el runtime de Llimphi (iter 2/3 del plan AccessKit); el modelo
# `SemanticsSpec` del compositor es independiente de estas crates.
accesskit = "0.24"
accesskit_winit = "0.33"
taffy = "0.9"
# parley = shaping completo (bidi, ligatures, fallback CJK/emoji vía fontique, line break).
parley = "0.4"
# Bucle Elm (input→update→view→layout→raster→present). Lo consumen las apps.
llimphi-ui = { path = "02_ruway/llimphi/llimphi-ui" }
# Paleta semántica compartida por las apps y los widgets.
llimphi-theme = { path = "02_ruway/llimphi/llimphi-theme" }
# Tweens y helpers de animación sobre el bucle Elm.
llimphi-motion = { path = "02_ruway/llimphi/llimphi-motion" }
# Iconos vectoriales (BezPath en grid 24×24) compartidos por todas las apps.
llimphi-icons = { path = "02_ruway/llimphi/llimphi-icons" }
# Puente fino vello_svg → Llimphi para SVG arbitrario (íconos .desktop, logos).
llimphi-svg = { path = "02_ruway/llimphi/llimphi-svg" }
# Widgets reusables sobre llimphi-ui — uno por crate.
llimphi-widget-app-header = { path = "02_ruway/llimphi/widgets/app-header" }
llimphi-widget-banner = { path = "02_ruway/llimphi/widgets/banner" }
llimphi-widget-button = { path = "02_ruway/llimphi/widgets/button" }
llimphi-widget-card = { path = "02_ruway/llimphi/widgets/card" }
llimphi-clipboard = { path = "02_ruway/llimphi/widgets/clipboard" }
llimphi-widget-context-menu = { path = "02_ruway/llimphi/widgets/context-menu" }
llimphi-widget-edit-menu = { path = "02_ruway/llimphi/widgets/edit-menu" }
llimphi-widget-menubar = { path = "02_ruway/llimphi/widgets/menubar" }
llimphi-widget-list = { path = "02_ruway/llimphi/widgets/list" }
llimphi-widget-grid = { path = "02_ruway/llimphi/widgets/grid" }
llimphi-widget-table = { path = "02_ruway/llimphi/widgets/table" }
llimphi-widget-color-picker = { path = "02_ruway/llimphi/widgets/color-picker" }
llimphi-widget-slider = { path = "02_ruway/llimphi/widgets/slider" }
llimphi-widget-scroll = { path = "02_ruway/llimphi/widgets/scroll" }
llimphi-widget-splitter = { path = "02_ruway/llimphi/widgets/splitter" }
llimphi-widget-stat-card = { path = "02_ruway/llimphi/widgets/stat-card" }
llimphi-widget-tabs = { path = "02_ruway/llimphi/widgets/tabs" }
llimphi-module-allichay = { path = "02_ruway/llimphi/modules/allichay" }
llimphi-module-command-palette = { path = "02_ruway/llimphi/modules/command-palette" }
llimphi-module-diff-viewer = { path = "02_ruway/llimphi/modules/diff-viewer" }
llimphi-module-fif = { path = "02_ruway/llimphi/modules/fif" }
llimphi-module-file-picker = { path = "02_ruway/llimphi/modules/file-picker" }
llimphi-module-bookmarks = { path = "02_ruway/llimphi/modules/bookmarks" }
llimphi-module-mini-map = { path = "02_ruway/llimphi/modules/mini-map" }
llimphi-module-shuma-term = { path = "02_ruway/llimphi/modules/shuma-term" }
llimphi-module-symbol-outline = { path = "02_ruway/llimphi/modules/symbol-outline" }
llimphi-plugin-host = { path = "02_ruway/llimphi/modules/plugin-host" }
llimphi-widget-theme-switcher = { path = "02_ruway/llimphi/widgets/theme-switcher" }
llimphi-widget-text-area = { path = "02_ruway/llimphi/widgets/text-area" }
llimphi-widget-text-editor-core = { path = "02_ruway/llimphi/widgets/text-editor-core" }
llimphi-widget-text-editor = { path = "02_ruway/llimphi/widgets/text-editor" }
llimphi-widget-text-editor-lsp = { path = "02_ruway/llimphi/widgets/text-editor-lsp" }
llimphi-widget-text-input = { path = "02_ruway/llimphi/widgets/text-input" }
llimphi-widget-tiled = { path = "02_ruway/llimphi/widgets/tiled" }
llimphi-widget-nodegraph = { path = "02_ruway/llimphi/widgets/nodegraph" }
llimphi-widget-tree = { path = "02_ruway/llimphi/widgets/tree" }
llimphi-widget-navigator = { path = "02_ruway/llimphi/widgets/navigator" }
llimphi-widget-select = { path = "02_ruway/llimphi/widgets/select" }
llimphi-widget-terminal = { path = "02_ruway/llimphi/widgets/terminal" }
# Sello vectorial wawa (rombo + W implícita + Merkle Core).
llimphi-widget-wawa-mark = { path = "02_ruway/llimphi/widgets/wawa-mark" }
# Widgets de elegancia transversal (tooltip, spinner, progress, toast,
# modal, empty, status-bar, shortcuts-help, splash).
llimphi-widget-tooltip = { path = "02_ruway/llimphi/widgets/tooltip" }
llimphi-widget-spinner = { path = "02_ruway/llimphi/widgets/spinner" }
llimphi-widget-progress = { path = "02_ruway/llimphi/widgets/progress" }
llimphi-widget-toast = { path = "02_ruway/llimphi/widgets/toast" }
llimphi-widget-modal = { path = "02_ruway/llimphi/widgets/modal" }
llimphi-widget-empty = { path = "02_ruway/llimphi/widgets/empty" }
llimphi-widget-status-bar = { path = "02_ruway/llimphi/widgets/status-bar" }
llimphi-widget-shortcuts-help = { path = "02_ruway/llimphi/widgets/shortcuts-help" }
llimphi-widget-timeline = { path = "02_ruway/llimphi/widgets/timeline" }
llimphi-widget-transport = { path = "02_ruway/llimphi/widgets/transport" }
llimphi-widget-waveform = { path = "02_ruway/llimphi/widgets/waveform" }
llimphi-widget-splash = { path = "02_ruway/llimphi/widgets/splash" }
# Controles de formulario y signaling (switch, segmented, breadcrumb,
# badge, avatar, skeleton, field).
llimphi-widget-switch = { path = "02_ruway/llimphi/widgets/switch" }
llimphi-widget-segmented = { path = "02_ruway/llimphi/widgets/segmented" }
llimphi-widget-dock-rail = { path = "02_ruway/llimphi/widgets/dock-rail" }
llimphi-widget-breadcrumb = { path = "02_ruway/llimphi/widgets/breadcrumb" }
llimphi-widget-badge = { path = "02_ruway/llimphi/widgets/badge" }
llimphi-widget-avatar = { path = "02_ruway/llimphi/widgets/avatar" }
llimphi-widget-skeleton = { path = "02_ruway/llimphi/widgets/skeleton" }
llimphi-widget-field = { path = "02_ruway/llimphi/widgets/field" }
# Firma visual transversal (gradient sutil + hairline accent).
llimphi-widget-panel = { path = "02_ruway/llimphi/widgets/panel" }
llimphi-widget-panes = { path = "02_ruway/llimphi/widgets/panes" }
# Widgets Flutter-like — composición sobre primitivas Tier 1/3 ya
# expuestas (sombra, gradient, animated, ripple).
llimphi-widget-chip = { path = "02_ruway/llimphi/widgets/chip" }
llimphi-widget-fab = { path = "02_ruway/llimphi/widgets/fab" }
llimphi-widget-wrap = { path = "02_ruway/llimphi/widgets/wrap" }
llimphi-widget-range-slider = { path = "02_ruway/llimphi/widgets/range-slider" }
llimphi-widget-calendar = { path = "02_ruway/llimphi/widgets/calendar" }
llimphi-widget-fitted-box = { path = "02_ruway/llimphi/widgets/fitted-box" }
llimphi-widget-carousel = { path = "02_ruway/llimphi/widgets/carousel" }
llimphi-widget-rating = { path = "02_ruway/llimphi/widgets/rating" }
llimphi-widget-gauge = { path = "02_ruway/llimphi/widgets/gauge" }
llimphi-widget-scaffold = { path = "02_ruway/llimphi/widgets/scaffold" }
llimphi-widget-hero = { path = "02_ruway/llimphi/widgets/hero" }
llimphi-workspace = { path = "02_ruway/llimphi/llimphi-workspace" }
# Abstracción Selector — host (paths) + wawa (khipus).
llimphi-module-selector = { path = "02_ruway/llimphi/modules/selector" }

# === Filesystem helpers ===
directories = "5"

# === Diff line-based (llimphi-module-diff-viewer) ===
# `similar` es la crate de facto: implementa Myers + Patience + LCS,
# expone `TextDiff` con ChangeTag por línea (Equal/Insert/Delete),
# zero deps fuera de std. La 2.x es estable hace años.
similar = "2"

# === Fuzzy matching (shuma-history) ===
# nucleo-matcher = mismo matcher que helix-editor: rápido, Unicode-correct,
# bonus por prefijos, ranking estable. La versión 0.3 expone el API simple
# que necesitamos (Matcher + Pattern + score).
nucleo-matcher = "0.3"

# === Transporte autenticado (shuma-link) ===
# snow = framework Noise pure-rust. Lo usamos en modo Noise_XK (cliente
# conoce la pubkey del servidor, server descubre la del cliente y la
# valida contra una allowlist). ChaCha20-Poly1305 + X25519 + BLAKE2s.
# La versión 0.9 viene pinneada por libp2p, así nos alineamos.
snow = "0.9"
hex = "0.4"

# === PTY + emulador de terminal (shuma-exec, módulos REPL) ===
# portable-pty aloja un PTY cross-platform; lo usamos para los
# comandos TUI tipo vim/htop/less que necesitan un terminal de verdad.
# vt100 parsea la secuencia de bytes que el PTY emite (ANSI + cursor
# movement + erase + screen state) y mantiene un buffer de pantalla
# renderizable como grid.
portable-pty = "0.9"
vt100 = "0.16"

# === WASM web (gioser) ===
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
glam = "0.30"

# === Markdown (pluma) ===
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# === Archivos comprimidos (nahual archive viewer) ===
# Sólo listamos el directorio central (nombres/tamaños); no descomprimimos,
# por eso default-features=false alcanza para ZIP. Para tar.gz sí
# descomprimimos en streaming con flate2 (ya declarado arriba), saltando
# los datos de cada entrada — sólo leemos headers.
zip = { version = "2.4", default-features = false }
tar = { version = "0.4", default-features = false }

# === Fuentes (nahual font viewer) ===
# Parseo de TTF/OTF/TTC y extracción de contornos de glifo a paths.
ttf-parser = "0.25"

# ============================================================
# Intra-workspace deps de nahual (referenciadas por workspace = true)
# ============================================================
nahual-text-viewer-llimphi = { path = "02_ruway/nahual/nahual-text-viewer-llimphi" }
nahual-image-viewer-llimphi = { path = "02_ruway/nahual/nahual-image-viewer-llimphi" }
nahual-thumb-core = { path = "02_ruway/nahual/nahual-thumb-core" }
nahual-gallery-llimphi = { path = "02_ruway/nahual/nahual-gallery-llimphi" }
nahual-video-viewer-llimphi = { path = "02_ruway/nahual/nahual-video-viewer-llimphi" }
nahual-card-viewer-llimphi = { path = "02_ruway/nahual/nahual-card-viewer-llimphi" }
nahual-audio-viewer-llimphi = { path = "02_ruway/nahual/nahual-audio-viewer-llimphi" }
nahual-tree-viewer-llimphi = { path = "02_ruway/nahual/nahual-tree-viewer-llimphi" }
nahual-hex-viewer-llimphi = { path = "02_ruway/nahual/nahual-hex-viewer-llimphi" }
nahual-table-viewer-llimphi = { path = "02_ruway/nahual/nahual-table-viewer-llimphi" }
nahual-markdown-viewer-llimphi = { path = "02_ruway/nahual/nahual-markdown-viewer-llimphi" }
nahual-archive-viewer-llimphi = { path = "02_ruway/nahual/nahual-archive-viewer-llimphi" }
nahual-font-viewer-llimphi = { path = "02_ruway/nahual/nahual-font-viewer-llimphi" }
nahual-map-viewer-llimphi = { path = "02_ruway/nahual/nahual-map-viewer-llimphi" }
nahual-geo-core = { path = "02_ruway/nahual/nahual-geo-core" }
nahual-viewer-core = { path = "02_ruway/nahual/nahual-viewer-core" }
nahual-file-explorer-llimphi = { path = "02_ruway/nahual/nahual-file-explorer-llimphi" }

# ============================================================
# Intra-workspace deps de pineal (módulo de gráficos)
# ============================================================
pineal-core = { path = "00_unanchay/pineal/pineal-core" }
pineal-render = { path = "00_unanchay/pineal/pineal-render" }
pineal-cartesian = { path = "00_unanchay/pineal/pineal-cartesian" }
pineal-stream = { path = "00_unanchay/pineal/pineal-stream" }
pineal-mesh = { path = "00_unanchay/pineal/pineal-mesh" }
pineal-financial = { path = "00_unanchay/pineal/pineal-financial" }
pineal-polar = { path = "00_unanchay/pineal/pineal-polar" }
pineal-heatmap = { path = "00_unanchay/pineal/pineal-heatmap" }
pineal-treemap = { path = "00_unanchay/pineal/pineal-treemap" }
pineal-flow = { path = "00_unanchay/pineal/pineal-flow" }
pineal-phosphor = { path = "00_unanchay/pineal/pineal-phosphor" }
pineal-export = { path = "00_unanchay/pineal/pineal-export" }
pineal-hexbin = { path = "00_unanchay/pineal/pineal-hexbin" }
pineal-contour = { path = "00_unanchay/pineal/pineal-contour" }
pineal-bars = { path = "00_unanchay/pineal/pineal-bars" }
pineal = { path = "00_unanchay/pineal/pineal-umbrella" }

# ============================================================
# Intra-workspace deps de iniy (laboratorio semántico de creencias)
# ============================================================
iniy-core = { path = "01_yachay/iniy/iniy-core" }
iniy-ingest = { path = "01_yachay/iniy/iniy-ingest" }
iniy-extract = { path = "01_yachay/iniy/iniy-extract" }
iniy-nli = { path = "01_yachay/iniy/iniy-nli" }
iniy-nli-llm = { path = "01_yachay/iniy/iniy-nli-llm" }
iniy-graph = { path = "01_yachay/iniy/iniy-graph" }
iniy-store = { path = "01_yachay/iniy/iniy-store" }

# === auto: declarados por crates internos faltantes ===
cosmos-coords = { path = "01_yachay/cosmos/cosmos-coords" }
cosmos-core = { path = "01_yachay/cosmos/cosmos-core" }
cosmos-ephemeris = { path = "01_yachay/cosmos/cosmos-ephemeris" }
cosmos-time = { path = "01_yachay/cosmos/cosmos-time" }
cosmos-wcs = { path = "01_yachay/cosmos/cosmos-wcs" }

# === auto: externas de eternal ===
celestial-eop-data = { version = "0.1"}
approx = "0.5"
byteorder = "1.5"
cc = "1.0"
chrono = "0.4"
crc32fast = "1.4"
criterion = "0.5"
csv = "1.4"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.18"
lz4_flex = "0.11"
memmap2 = "0.9"
mockito = "1.0"
ndarray = "0.15"
num-traits = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
png = "0.18"
proptest = "1.4"
quick-xml = "0.31"
rayon = "1.8"
regex = "1.11"
reqwest = "0.12"
tiff = "0.11"
wide = "0.7"
wiremock = "0.6"

# === i18n (rimay-localize) ===
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
sys-locale = "0.3"

# === Servo (puriy-engine) ===
# Crates publicados de Servo embebibles individualmente. html5ever/markup5ever
# ya entran via ammonia→surrealdb→nakui, así que alineamos versión para no
# duplicar el árbol. markup5ever_rcdom es el DOM Rc-based simple (suficiente
# para Fase 2: parsear y renderizar, sin scripting). cssparser es el tokenizer
# CSS de Stylo, sirve para inline styles. ureq = HTTP síncrono minimalista,
# evita pull de tokio en el engine.
html5ever = "0.39"
markup5ever = "0.39"
markup5ever_rcdom = "0.39"
cssparser = "0.35"
url = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }

# === takiy-synth (SoundFont MIDI) ===
# rustysynth = sintetizador SF2 puro Rust, MIT. Reemplaza el oscilador
# feo de takiy-synth por muestras reales (FluidR3, GeneralUser GS, etc).
rustysynth = "1.3"

# === takiy-playback (audio device output) ===
# cpal = backend de audio cross-platform (ALSA/PulseAudio/Pipewire en
# Linux, WASAPI en Windows, CoreAudio en macOS). Lo usamos sólo para
# abrir el device default y empujar muestras f32 — nada de mezclado
# ni efectos en el callback.
cpal = "0.15"

# === media-source-wav (decoder PCM en disco) ===
# hound = lector/escritor WAV puro-Rust, sin deps nativas. Soporta PCM
# entero (8/16/24/32) y float (32). Suficiente para abrir samples y
# stems de prueba sin meter ffmpeg/symphonia.
hound = "3.5"

# === media-source-{mp3,flac,vorbis} (decoders vía symphonia) ===
# symphonia es una colección de decoders puro-Rust mantenida. `mp3` cubre
# media-source-mp3; `flac` (decoder + demuxer FLAC nativo) cubre
# media-source-flac (lossless); `vorbis` + `ogg` (codec + demuxer Ogg)
# cubren media-source-vorbis (lossy clásico, libre de patentes). Sin aac:
# ese tier patentado entra por shared/foreign-av.
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac", "vorbis", "ogg"] }

# === media-source-opus (decoder Opus NATIVO puro-Rust) ===
# Opus es el formato de audio nativo de gioser (par del video AV1). ogg
# demuxea las páginas Ogg; opus-wave es un port puro-Rust de libopus
# (SILK+CELT, sin C ni FFI) — par del rav1d del lado video.
ogg = "0.9"
opus-wave = "3"

# === media-source-webm (demux nativo Matroska/WebM) ===
# matroska-demuxer es un demuxer puro-Rust de MKV/WebM (EBML). Saca los
# paquetes de los tracks V_AV1 y A_OPUS para alimentar a media-source-av1
# y media-source-opus — un .webm AV1+Opus se reproduce 100% nativo.
matroska-demuxer = "0.7"
